codex-rs/cli/src/snapshots/moedex__doctor__tests__doctor_distribution_version_header.snap
---
source: cli/src/doctor.rs
expression: human
---
Moedex Doctor v1.2.3


-------------------------------------------------------------
0 ok | 0 warn | 0 fail ok

--summary compact output           --all expand truncated lists
--json redacted report
